@startuml
title TD6
'''classes

class Lampe{
- nom : String
- allume : boolean
  + Lampe(nom)
  + allumer()
  +eteindre()
  +toString()
}
class Telecommande{
+ Telecommande()
+ ajouterAppareil(Appareil)
+ activerAppareil(indiceAppareil)
+ desactiverAppareil (indiceAppareil)
+ activerTout()
+toString()
}

class Hifi{
- son : int
+ allumer()
+ eteindre()
+ toString()
}

class Television{
- son : int
+ allumer()
+ eteindre()
+ toString()
}


Interface Appareil{
+ allumer()
+ eteindre()
}

'''relations
Telecommande --> "*" Appareil : - appareils
Appareil <|.. Hifi
Appareil <|.. Lampe
Appareil <|.. Television
@enduml